--- a/src/styles/pages/about.scss
+++ b/src/styles/pages/about.scss
@@ -1,6 +1,10 @@
 @use '../util' as *;
 
-html:has(body.about),
+// Override html overflow for about page
+html.about-page {
+  overflow: auto !important;
+}
+
 body.about {
   overflow: auto;
   background: white;
